--- a/index.html
+++ b/index.html
@@ -19,27 +19,73 @@
                     <!-- md >= 768px -->
                     <div class="col-md-5">
                         <div class="row row-cols-1">
-                            <div class="col">
-                                FootA
+                            <div class="col" id="footA">
+                                <h2>김해시민교회</h2>
+                                <p>
+                                    주소: 경상남도 김해시 장유로 190 부영프라자 504호
+                                    <br>
+                                    연락처: 055-323-0691
+                                    <br>
+                                    <a href="https://gimhaesimin.netlify.app/">https://gimhaesimin.netlify.app</a>
+                                </p>
                             </div>
-                            <div class="col">
-                                FootB
+                            <div class="col" id="footB">
+                                <h3>SNS</h3>
+                                <ul>
+                                    <li>
+                                        <a href="https://youtube.com/@coh.s?si=zNhjSBaVsbcJDfhj" target="_blank" title="youtube"><img src="img/youtube.svg"/></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" target="_blank" title="blog"><img src="img/blog.svg"/></a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-md-7" id="footC">
                         <div class="row">
                             <div class="col-md-4">
-                                About
+                                <h3>ABOUT</h3>
+                                <ul>
+                                    <li>
+                                        <a href="https://gimhaesimin.netlify.app/about/address">주소</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://gimhaesimin.netlify.app/church/map">지도</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://gimhaesimin.netlify.app/about/staff">스태프</a>
+                                    </li>
+                                </ul>
                             </div>
                             <div class="col-md-4">
-                                Support
+                                <h3>SUPPORT</h3>
+                                <ul>
+                                    <li>
+                                        <a href="https://gimhaesimin.netlify.app/communication/FAQ">자주 묻는 질문</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://gimhaesimin.netlify.app/communication/contactus">문의</a>
+                                    </li>
+                                </ul>
                             </div>
                             <div class="col-md-4">
-                                Contents
+                                <h3>CONTENTS</h3>
+                                <ul>
+                                    <li>
+                                        <a href="https://gimhaesimin.netlify.app/contents/inform.html">공지사항</a>
+                                    </li>
+                                    <li>
+                                        <a href="https://gimhaesimin.netlify.app/dev/developer">개발자</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">블로그</a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
+                    <div id="footD">ⓒ KL corp. All rights reserved.</div>
                 </div>
             </div>
         </footer>
