--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="footD">ⓒ KL corp. All rights reserved.</div>
+                    <div class="text-center" id="footD">ⓒ KL corp. All rights reserved.</div>
                 </div>
             </div>
         </footer>
