--- a/index.html
+++ b/index.html
@@ -13,6 +13,91 @@
         <!-- Bootstrap JavaScript file (안 쓰면 지워도 됨)-->
         <script src="js/bootstrap.bundle.min.js"></script>
 
+        <!-- header navigation -->
+        <header>
+            <nav class="navbar navbar-secondary bg-secondary">
+                <!-- 어느 화면이든 모두 사용한다. -->
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img src="img/logo_header.svg" style="width:150px;"/></a>
+
+                    <!-- 네비게이션 버튼 -->
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                            예배
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">라이브</a></li>
+                            <li><a class="dropdown-item" href="#">설교</a></li>
+                            <li><a class="dropdown-item" href="#">예배안내</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                            성장
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">함께하는 교회</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                            자료
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">설교 원고</a></li>
+                            <li><a class="dropdown-item" href="#">갤러리</a></li>
+                            <li><a class="dropdown-item" href="#">도움되는 링크</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                            교육
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">중고등부</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                            소통
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">커뮤니티</a></li>
+                            <li><a class="dropdown-item" href="#">자주 묻는 질문</a></li>
+                            <li><a class="dropdown-item" href="#">문의</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                            교회
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">신념</a></li>
+                            <li><a class="dropdown-item" href="#">모시는 사람들</a></li>
+                            <li><a class="dropdown-item" href="#">오시는 길</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- 햄버거 -->
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                </div>
+            </nav>
+        </header>
+
+        <!-- 본문 -->
+        <div>
+            <p>교회~</p>
+        </div>
+
+        <!-- footer -->
         <footer>
             <div class="container">
                 <div class="row">
