--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
         <!-- Bootstrap JavaScript file (안 쓰면 지워도 됨)-->
         <script src="js/bootstrap.bundle.min.js"></script>
 
-        <!-- header navigation -->
+        <!-- Top Header -->
         <header>
+            
+        </header>
+
+        <!-- header navigation -->
+        <div class="headerNav">
             <nav class="navbar navbar-secondary bg-secondary">
                 <!-- 어느 화면이든 모두 사용한다. -->
                 <div class="container-fluid">
@@ -90,7 +95,7 @@
 
                 </div>
             </nav>
-        </header>
+        </div>
 
         <!-- 본문 -->
         <div>
