--- a/service/worship-guide.html
+++ b/service/worship-guide.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html style="height: 100%; width: 100%;">
+<html>
     <head>
         <title>예배안내 - 김해시민교회</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css" media="screen and (max-width:768px)"/>
         <link rel="stylesheet" href="../larger-screen-style.css" media="screen and (min-width:769px)"/>
