--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
 
         <!-- Top Header -->
         <header>
-            
+            <div class="container" id="top-header">
+                <div class="row" id="inner">
+                    <div class="col" id="inner-left">
+                        <a href="https://gimhaesimin.netlify.app/service/worship-guide">예배안내</a>
+                        <a href="https://gimhaesimin.netlify.app/church/map"> 오시는 길 </a>
+                        <a href="https://youtube.com/@coh.s?si=zNhjSBaVsbcJDfhj" class="youtube" target="_blank" title="시민교회 유튜브">유튜브</a>
+                    </div>
+                    <div class="col" id="inner-right">
+                        <a href="#">로그인</a>
+                        <a href="#">회원가입</a>
+                    </div>
+                </div>
+            </div>
         </header>
 
         <!-- header navigation -->
@@ -104,7 +116,7 @@
 
         <!-- footer -->
         <footer>
-            <div class="container">
+            <div class="container bg-info">
                 <div class="row">
                     <!-- md >= 768px -->
                     <div class="col-md-5">
