--- a/default.html
+++ b/default.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="../style.css" media="screen and (max-width:768px)"/>
         <link rel="stylesheet" href="../larger-screen-style.css" media="screen and (min-width:769px)"/>
         <script src="../sideMenu.js"></script>
-        <link rel="stylesheet" href="style_(Put CSS FileName Here).css">
+        <link rel="stylesheet" href="style_.css">
         <link rel="icon" href="img/logo_head.svg">
         <script src="../pageView.js"></script>
     </head>
