--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8"/>
         <link rel="icon" href="img/logo_head.svg"/>
-        <link rel="stylesheet" href="style.css" media="screen and (max-width:768px)"/>
-        <link rel="stylesheet" href="larger-screen-style.css" media="screen and (min-width:769px)"/>
+        <link rel="stylesheet" href="style.css"/>
         <script src="sideMenu.js"></script>
     </head>
     <body>
