--- a/default.html
+++ b/default.html
@@ -4,8 +4,7 @@
         <title>Sub-Title Here - 김해시민교회</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../style.css" media="screen and (max-width:768px)"/>
-        <link rel="stylesheet" href="../larger-screen-style.css" media="screen and (min-width:769px)"/>
+        <link rel="stylesheet" href="../style.css"/>
         <script src="../sideMenu.js"></script>
         <link rel="stylesheet" href="style_.css">
         <link rel="icon" href="img/logo_head.svg">
