--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta charset="UTF-8"/>
         <link rel="icon" href="img/logo_head.svg"/>
         <link rel="stylesheet" href="style.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Orbit&display=swap" rel="stylesheet">
         <script src="sideMenu.js"></script>
     </head>
     <body>
@@ -121,7 +124,7 @@
                         <button class="dropbtn">소통</button>
                         <div class="dropdown_content">
                             <a href="https://gimhaesimin.netlify.app/communication/community"> 커뮤니티 </a>
-                            <a href="https://gimhaesimin.netlify.app/communication/FAQ"> 자주 묻는 질문 </a>
+                            <a href="https://gimhaesimin.netlify.app/communication/FAQ"> FAQ </a>
                             <a href="https://gimhaesimin.netlify.app/communication/contactus"> 문의 </a>
                         </div>
                     </div>
