--- a/test.html
+++ b/test.html
@@ -1,92 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>교회 홈페이지</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    /* 추가적인 스타일링을 위한 CSS 코드 */
-  </style>
-</head>
-<body>
+<html>
+  <head>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-  <!-- 네비게이션 바 -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-      <img src="church_logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-      교회 이름
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <link rel="stylesheet" href="test.css">
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">홈</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">예배 시간</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">소식</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">연락</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <!-- 모바일용 햄버거 메뉴 -->
-  <div class="collapse" id="navbarToggleExternalContent">
-    <div class="bg-light p-4">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">홈</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">예배 시간</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">소식</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">연락</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-
-  <!-- 햄버거 아이콘 -->
-  <nav class="navbar navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  </nav>
-
-  <!-- 메인 콘텐츠 -->
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <h1>우리 교회에 오신 걸 환영합니다!</h1>
-        <p>교회 소개 및 환영 메시지 등을 여기에 입력하세요.</p>
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <div id="sidebar" class="col-md-3">
+          <nav class="sidebar">
+            <!-- Your sidebar content here -->
+          </nav>
+        </div>
+        <div class="col-md-9">
+          <button id="sidebar-toggle" class="btn btn-primary">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
       </div>
     </div>
-
-    <!-- 이벤트 섹션 -->
-    <div class="row">
-      <div class="col">
-        <h2>이달의 이벤트</h2>
-        <p>교회에서 이번 달에 진행할 이벤트에 대한 정보를 여기에 입력하세요.</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Bootstrap 스크립트 -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+    
+  </body>
+  <script src="test.js"></script>
 </html>
