--- a/index.html
+++ b/index.html
@@ -143,14 +143,16 @@
                 </div>
             </div>
 
-            <div>
-                <p>교회~</p> 
+            <main>
+                <div>
+                    <p>교회~</p> 
 
 
 
 
-                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            </div>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                </div>
+            </main>
 
             <!-- footer -->
             <footer>
