--- a/test_sidebar/test_sidebar.html
+++ b/test_sidebar/test_sidebar.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         
-      <div id="sideIsOpen">
+      <div id="sideIsOpen" style="display: none">
         <div id="opacity">
 
         </div>
