--- a/about/address.html
+++ b/about/address.html
@@ -5,16 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css"/>
-        <script src="../sideMenu.js"></script>
-        <link rel="stylesheet" href="style_(Put CSS FileName Here).css">
+        <script src="../sidebar.js"></script>
         <link rel="icon" href="img/logo_head.svg">
         <link rel="stylesheet" href="style_address.css">
         <script src="../pageView.js"></script>
     </head>
     <body>
 
-        <!-- SideMenu -->
-        <script>Write.SideMenu();</script>
+        <!-- Sidebar -->
+        <script>Show.Sidebar();</script>
 
         <!-- Header -->
         <script>Write.Header();</script>
