--- a/church/belief.html
+++ b/church/belief.html
@@ -4,17 +4,16 @@
         <title>믿음 - 김해시민교회</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../style.css" media="screen and (max-width:768px)"/>
-        <link rel="stylesheet" href="../larger-screen-style.css" media="screen and (min-width:769px)"/>
-        <script src="../sideMenu.js"></script>
+        <link rel="stylesheet" href="../style.css"/>
+        <script src="../sidebar.js"></script>
         <link rel="stylesheet" href="style_belief.css">
         <link rel="icon" href="img/logo_head.svg">
         <script src="../pageView.js"></script>
     </head>
     <body>
 
-        <!-- SideMenu -->
-        <script>Write.SideMenu();</script>
+        <!-- Sidebar -->
+        <script>Show.Sidebar();</script>
 
         <!-- Header -->
         <script>Write.Header();</script>
