--- a/church/map.html
+++ b/church/map.html
@@ -4,15 +4,15 @@
         <title>오시는 길 - 김해시민교회</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css"/>
-        <script src="../sideMenu.js"></script>
+        <script src="../sidebar.js"></script>
         <link rel="stylesheet" href="style_map.css">
         <link rel="icon" href="img/logo_head.svg">
         <script src="../pageView.js"></script>
     </head>
     <body>
 
-        <!-- SideMenu -->
-        <script>Write.SideMenu();</script>
+        <!-- Sidebar -->
+        <script>Show.Sidebar();</script>
 
         <!-- Header -->
             <script>Write.Header();</script>
