--- a/service/worship-guide.html
+++ b/service/worship-guide.html
@@ -5,15 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css"/>
-        <script src="../sideMenu.js"></script>
+        <script src="../sidebar.js"></script>
         <link rel="stylesheet" href="style_worshipguide.css">
         <link rel="icon" href="img/logo_head.svg">
         <script src="../pageView.js"></script>
     </head>
     <body>
 
-        <!-- SideMenu -->
-        <script>Write.SideMenu();</script>
+        <!-- Sidebar -->
+        <script>Show.Sidebar();</script>
 
         <!-- Header -->
         <script>Write.Header();</script>
