--- a/church/map.html
+++ b/church/map.html
@@ -12,7 +12,7 @@
     <body>
 
         <!-- Sidebar -->
-        <script>Show.Sidebar();</script>
+        <script>Write.Sidebar();</script>
 
         <!-- Header -->
             <script>Write.Header();</script>
