--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </div>
                 <div class="navbar-right">
                     <img src="img/search1.svg" />
-                    <input type="button" id="sidebar-toggle" onclick="Show.Sidebar()">
+                    <input type="button" id="sidebar-toggle" onclick="Show.Sidebar();">
                 </div>
             </div>
 
