--- a/church/map.html
+++ b/church/map.html
@@ -2,6 +2,7 @@
 <html style="height: 100%; width: 100%;">
     <head>
         <title>오시는 길 - 김해시민교회</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css"/>
         <script src="../sidebar.js"></script>
