--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
 
         <!-- sidebar -->
-        <div id="opacity" style="display:none"></div>
+        <input type="button" id="opacity" onclick="Show.Sidebar();" style="display:none"></div>
         <div id="sidebar">
           <nav class="sidebar">
             <!-- Your sidebar content here -->
