--- a/service/worship-guide.html
+++ b/service/worship-guide.html
@@ -13,7 +13,7 @@
     <body>
 
         <!-- Sidebar -->
-        <script>Show.Sidebar();</script>
+        <script>Write.Sidebar();</script>
 
         <!-- Header -->
         <script>Write.Header();</script>
