--- a/service/worship-guide.html
+++ b/service/worship-guide.html
@@ -8,6 +8,9 @@
         <script src="../sidebar.js"></script>
         <link rel="stylesheet" href="style_worshipguide.css">
         <link rel="icon" href="img/logo_head.svg">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
         <script src="../pageView.js"></script>
     </head>
     <body>
