--- a/about/address.html
+++ b/about/address.html
@@ -8,6 +8,9 @@
         <script src="../sidebar.js"></script>
         <link rel="icon" href="img/logo_head.svg">
         <link rel="stylesheet" href="style_address.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
         <script src="../pageView.js"></script>
     </head>
     <body>
