--- a/church/map.html
+++ b/church/map.html
@@ -29,7 +29,7 @@
 
             <hr>
             <br>
-            <!-- * 카카오맵 - 지도퍼가기 -->
+            <!-- * 카카오맵 - 지도퍼가기 큰 거 -->
             <!-- 1. 지도 노드 -->
             <div class="row">
                 <div id="daumRoughmapContainer1707545075097" class="root_daum_roughmap root_daum_roughmap_landing column"></div>
@@ -50,7 +50,7 @@
                     }).render();
                 </script>
 
-                <!-- * 카카오맵 - 지도퍼가기 -->
+                <!-- * 카카오맵 - 지도퍼가기 작은 거 -->
                 <!-- 1. 지도 노드 -->
                 <div id="daumRoughmapContainer1708320582479" class="root_daum_roughmap root_daum_roughmap_landing"></div>
 
