--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                             <a href="https://youtube.com/@coh.s?si=zNhjSBaVsbcJDfhj" class="youtube" target="_blank" title="시민교회 유튜브">유튜브</a>
                         </div>
                         <div class="inner-right">
-                            <a href="#">로그인</a>
-                            <a href="#">회원가입</a>
+                            <a href="https://gimhaesimin.netlify.app/login/login">로그인</a>
+                            <a href="https://gimhaesimin.netlify.app/login/signup">회원가입</a>
                         </div>
                     </div>
                 </div>
