--- a/login/login.html
+++ b/login/login.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         <!-- Main Info -->
+        <a href="https://gimhaesimin.netlify.app/">뒤로</a>
         <img src="../img/under-construction.gif">
    
     </body>
