--- a/church/helpers.html
+++ b/church/helpers.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" href="style_helpers.css">
         <link rel="icon" href="../img/logo_head.svg">
         <script src="../pageView.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- SideMenu -->
