--- a/communication/community.html
+++ b/communication/community.html
@@ -25,7 +25,7 @@
         <!-- Main Info -->
         <main>
             <h2>커뮤니티</h2><hr>
-            <br>커뮤니티 사이트 만드는 중...
+            <br><p>커뮤니티 사이트 만드는 중...</p>
             <img src="../img/under-construction.gif" >
         </main>
    
