--- a/communication/FAQ.html
+++ b/communication/FAQ.html
@@ -25,7 +25,7 @@
         <!-- Main Info -->
         <main>
             <h2>자주 묻는 질문</h2><hr>
-            <br>질문 기다리는 중....
+            <br><p>질문 기다리는 중....</p>
             <img src="../img/under-construction.gif" >
         </main>
    
