--- a/communication/contactus.html
+++ b/communication/contactus.html
@@ -25,7 +25,7 @@
         <!-- Main Info -->
         <main>
             <h2>문의</h2><hr>
-            <br>
+            <br><p>공사중...!</p>
             <img src="../img/under-construction.gif" >
         </main>
    
