--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                     <a href="https://youtube.com/@coh.s?si=zNhjSBaVsbcJDfhj" target="_blank" title="youtube"><img src="img/youtube.svg"/></a>
                                 </li>
                                 <li>
-                                    <a href="#" target="_blank" title="blog"><img src="img/blog.svg"/></a>
+                                    <a href="https://blog.naver.com/gimhae_simin" target="_blank" title="blog"><img src="img/blog.svg"/></a>
                                 </li>
                             </ul>
                         </nav>
@@ -219,7 +219,7 @@
                                     <a href="https://gimhaesimin.netlify.app/dev/developer">개발자</a>
                                 </li>
                                 <li>
-                                    <a href="#">블로그</a>
+                                    <a href="https://blog.naver.com/gimhae_simin">블로그</a>
                                 </li>
                             </ul>
                         </div>
