--- a/index.html
+++ b/index.html
@@ -42,30 +42,51 @@
             <div class="row g-2">
                 <!-- column 절반 사용 -->
                 <div class="col-6">
-                    <div class="p-3">Custom column padding</div>
-                </div>
-                <div class="col-6">
-                    <div class="p-3">Custom column padding</div>
-                </div>
-                <div class="col-6">
-                    <div class="p-3">Custom column padding</div>
-                </div>
-                <div class="col-6">
-                    <div class="p-3">Custom column padding</div>
-                </div>
-                <div class="col-6">
-                    <div class="p-3">전체 메뉴</div>
+                    <div class="p-3">
+                        <a href="#">성경</a>
+                    </div>
                 </div>
                 <div class="col-6">
                     <div class="p-3">
-                        <a href="https://gimhaesimin.netlify.app/">
-                            PC버전
-                        </a></div>
+                        <a href="#">찬송가</a>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="p-3">
+                        <a href="#">도움되는 링크</a>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="p-3">
+                        <a href="#">주보</a>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="sns_links">
+                        <div class="btn-group" role="group" aria-label="SNS_link">
+                            <button type="button" class="btn youtube" onclick="location.href='https://youtube.com/@coh.s?si=zNhjSBaVsbcJDfhj';"></button>
+                            <button type="button" class="btn blog" onclick="location.href='https://blog.naver.com/gimhae_simin';"></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="">
+                        <a href="#">
+                            dev
+                        </a>
+                        <a href="#">
+                            후원
+                        </a>
+                    </div>
                 </div>
                 <!-- columns 끝 -->
             </div>
             <!-- row 끝 -->
         </div>
         <!-- 기본 메뉴 컨테이너 끝 -->
+
+        <!-- 바? -->
+        <button type="button" class="btn"></button>
+
     </body>
 </html>
