--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="side_menu info">
                 자료
                 <ul>
-                    <li><a href="https://gimhaesimin.netlify.app/info/service_script"> 설교 원고 </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/info/QT"> QT </a></li>
                     <li><a href="https://gimhaesimin.netlify.app/info/gallery"> 갤러리 </a></li>
                     <li><a href="https://gimhaesimin.netlify.app/info/helpfullinks"> 도움되는 링크 </a></li>
                 </ul>
