--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="dropdown info">
                         <button class="dropbtn">자료</button>
                         <div class="dropdown_content">
-                            <a href="https://gimhaesimin.netlify.app/info/service_script"> 설교 원고 </a>
+                            <a href="https://gimhaesimin.netlify.app/info/QT"> QT </a>
                             <a href="https://gimhaesimin.netlify.app/info/gallery"> 갤러리 </a>
                             <a href="https://gimhaesimin.netlify.app/info/helpfullinks"> 도움되는 링크 </a>
                         </div>
