--- a/church/map.html
+++ b/church/map.html
@@ -52,7 +52,7 @@
 
                 <!-- * 카카오맵 - 지도퍼가기 작은 거 -->
                 <!-- 1. 지도 노드 -->
-                <div id="daumRoughmapContainer1708320582479" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+                <div id="daumRoughmapContainer1708320582479" class="root_daum_roughmap root_daum_roughmap_landing" style="margin: 0 auto;"></div>
 
                 <!-- 3. 실행 스크립트 -->
                 <script charset="UTF-8">
