--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </div>
                 </div>
                 <div class="navbar-right">
-                    <img src="img/search1.svg" />
+                    <input type="button" id="sidebar-search">
                     <input type="button" id="sidebar-toggle" onclick="Show.Sidebar();">
                 </div>
             </div>
