--- a/church/map.html
+++ b/church/map.html
@@ -31,7 +31,7 @@
             <br>
             <!-- * 카카오맵 - 지도퍼가기 큰 거 -->
             <!-- 1. 지도 노드 -->
-            <div class="row" style="z-index: 0;">
+            <div class="row">
                 <div id="daumRoughmapContainer1707545075097" class="root_daum_roughmap root_daum_roughmap_landing column"></div>
 
                 <!--
