--- a/church/map.html
+++ b/church/map.html
@@ -63,6 +63,11 @@
                         "mapHeight" : "220"
                     }).render();
                 </script>
+                <style>
+                    .root_daum_roughmap .wrap_btn_zoom {
+                        z-index: 2;
+}
+                </style>
 
 
                 <div class="bus_route column">
