--- a/service/live.html
+++ b/service/live.html
@@ -34,11 +34,23 @@
                 <div class="right-side">
                     <h2>라이브</h2><hr>
                     <br>
-                    <div class="videoplayer">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/WsNxVR6-V5I?si=gZdE97RJnqF-FLFA" 
-                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-                    encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-                    <br>
+                    <div class="video">
+                        <div class="videoplayer">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/WsNxVR6-V5I?si=gZdE97RJnqF-FLFA" 
+                            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                            encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        </div>
+                        <div class="videodescription">
+                            <h4>영상 제목: </h4>
+                            <p>내용: 현재 라이브 기능을 사용하지 않고 있는 상황인지라, 영어 설교를 올립니다.</p>
+                        </div>
+                    </div>
+                    <div class="description">
+                        <p>
+                            
+                        </p>
+
+                    </div>
                 </div>
             </div>
         </main>
