--- a/contents/inform.html
+++ b/contents/inform.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Sub-Title Here - 김해시민교회</title>
+        <title>공지사항 - 김해시민교회</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css"/>
