--- a/service/live.html
+++ b/service/live.html
@@ -26,9 +26,16 @@
         <main>
             <div class="container">
                 <div class="left-side">
-                    <a href="#"><h3>라이브</h3></a>
-                    <a href="#"><h3>지난 설교들</h3></a>
-                    <a href="#"><h3>다른 설교들</h3></a>
+                    <a href="https://gimhaesimin.netlify.app/service/live">
+                        <h3>라이브</h3>
+                    </a>
+                    <img src="../img/arrow_right.svg">
+                    <a href="https://gimhaesimin.netlify.app/service/service">
+                        <h3>지난 설교들</h3>
+                    </a>
+                    <a href="#">
+                        <h3>다른 설교들</h3>
+                    </a>
                 </div>
                 
                 <div class="right-side">
@@ -54,8 +61,5 @@
                 </div>
             </div>
         </main>
-   
-        <!-- footer -->
-        <script>Write.Footer();</script>
     </body>
 </html> 
