edit head tag order

--- a/church/map.html
+++ b/church/map.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html style="height: 100%; width: 100%;">
     <head>
-        <title>오시는 길 - 김해시민교회</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>오시는 길 - 김해시민교회</title>
         <link rel="stylesheet" href="../style.css"/>
-        <script src="../sidebar.js"></script>
         <link rel="stylesheet" href="style_map.css">
-        <link rel="icon" href="../img/logo_head.svg">
+        <link rel="icon" href="img/logo_head.svg">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+        <script src="../sideMenu.js"></script>
         <script src="../pageView.js"></script>
     </head>
     <body>
