--- a/info/gallery.html
+++ b/info/gallery.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>갤러리 - 김해시민교회</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>갤러리 - 김해시민교회</title>
         <link rel="stylesheet" href="../style.css"/>
-        <script src="../sideMenu.js"></script>
-        <link rel="stylesheet" href="style_.css">
+        <!-- <link rel="stylesheet" href="style_gallery.css"> -->
         <link rel="icon" href="img/logo_head.svg">
-        <script src="../pageView.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+        <script src="../sideMenu.js"></script>
+        <script src="../pageView.js"></script>
     </head>
     <body>
 
