--- a/login/signup.html
+++ b/login/signup.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>로그인 - 김해시민교회</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>회원가입 - 김해시민교회</title>
         <link rel="stylesheet" href="../style.css"/>
-        <script src="../sideMenu.js"></script>
         <link rel="stylesheet" href="style_.css">
         <link rel="icon" href="../img/logo_head.svg">
-        <script src="../pageView.js"></script>
     </head>
     <body>
         <!-- Main Info -->
